fixed footer text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,10 @@ nav {
 
 /* footer styling */
 
+#footer-heading-text {
+    text-align: center;
+}
+
 .social-networks{
     text-align: center;
 
